add basic styles

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,29 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #161616;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+main {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+main h1 {
+  color: #9B9B9B;
+  font-size: 3.5rem;
+  margin-bottom: 5px;
+}
+
+main p {
+  color: #9B9B9B;
+  font-size: 1.2rem;
 }
