--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 body {
-  margin: 0;
+  background-color: #161616;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
+  margin: 0;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #161616;
+  -webkit-font-smoothing: antialiased;
 }
 
 code {
@@ -17,17 +17,127 @@ main {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
 main h1 {
-  color: #9B9B9B;
+  color: #d1d1d1;
   font-size: 3.5rem;
   margin-bottom: 5px;
+}
+
+main h1 span {
+  color: #00BECC;
 }
 
 main p {
   color: #9B9B9B;
   font-size: 1.2rem;
+}
+
+.timer-container {
+  margin-top: 30px;
+}
+
+.time-section {
+  font-size: 2.5rem;
+}
+
+.mode-buttons {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  width: 400px;
+}
+
+.mode-buttons li {
+  margin-right: 33px;
+}
+
+.mode-buttons button {
+  font-size: 1rem;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: none;
+  background-color: #444444;
+  color: #d1d1d1;
+  cursor: pointer;
+  transition: 0.2s linear;
+  -webkit-transition: 0.2s linear;
+  -moz-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
+}
+
+.mode-buttons button:hover {
+  border: 2px solid #00BECC;
+  color: #00BECC;
+}
+
+.active-label {
+  background-color: #00BECC;
+  color: #ffff;
+}
+
+.buttons-container {
+  padding: 25px;
+}
+
+.buttons-container button {
+  height: 50px;
+  width: 50px;
+  font-size: 2.5rem;
+  color: #ffff;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+button.active {
+  color: #00BECC;
+}
+
+.form-section {
+  padding-top: 35px;
+}
+
+.config-inputs-container label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #d1d1d1;
+  padding-bottom: 10px;
+}
+
+.config-input {
+  text-align: center;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: none;
+  color: #00BECC;
+  background-color: #444444;
+  font-size: 2rem;
+}
+
+form button {
+  background: none;
+  background-color: #444444;
+  border: none;
+  height: 40px;
+  width: 90px;
+  border-radius: 15px;
+  color: #d1d1d1;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+form button:hover {
+  transition: 0.2s linear;
+  -webkit-transition: 0.2s linear;
+  -moz-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
+  color: #fff;
+  background-color: #00BECC;
 }
