--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,10 @@ button.active {
   width: 80px;
 }
 
+.config-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 form button {
   background: none;
   background-color: #444444;
